# api/dto/product/promotion.dto.js
@@ -3,20 +3,22 @@ class PromotionDTO {
     infoCreate(body) {
         let tmp = {};
         let type = body.type;
+        let name = body.name;
+        tmp.name = name;
         tmp.type = type;
         if (type == "PERCENT") {
             let formula = body.percentFormula;
             tmp.percent_formula = {
-                quantity_purchased: formula.quantityPurchased,
+                purchased_quantity: formula.purchasedQuantity,
                 reduced_percent: formula.reducedPercent
             };
         } else if (type == "GIFT") {
             let formula = body.giftFormula;
             tmp.gift_formula = {
-                quantity_purchased: formula.quantityPurchased,
-                reduced_percent: formula.donatedQuantity,
+                purchased_quantity: formula.purchasedQuantity,
+                donated_quantity: formula.donatedQuantity,
                 donated_product: formula.donatedProduct
-            }
+            };
         }
         tmp.description = body.description;
         tmp.created_at = Date.now();
@@ -27,25 +29,27 @@ class PromotionDTO {
     infoUpdate(body) {
         let tmp = {};
         let _id = body._id;
+        let name = body.name;
         let type = body.type;
         tmp._id = _id;
+        tmp.name = name;
         tmp.type = type;
         if (type == "PERCENT") {
             let formula = body.percentFormula;
             tmp.percent_formula = {
-                quantity_purchased: formula.quantityPurchased,
+                purchased_quantity: formula.purchasedQuantity,
                 reduced_percent: formula.reducedPercent
             };
         } else if (type == "GIFT") {
             let formula = body.giftFormula;
             tmp.gift_formula = {
-                quantity_purchased: formula.quantityPurchased,
-                reduced_percent: formula.donatedQuantity,
+                purchased_quantity: formula.purchasedQuantity,
+                donated_quantity: formula.donatedQuantity,
                 donated_product: formula.donatedProduct
-            }
+            };
         }
         tmp.description = body.description;
-        tmp.created_at = Date.now();
+        tmp.updated_at = Date.now();
 
         return tmp;
     }
@@ -53,26 +57,22 @@ class PromotionDTO {
     infoResponse(promotion) {
         let tmp = {};
         tmp._id = promotion._id;
+        tmp.name = promotion.name;
         tmp.type = promotion.type;
-        if (type == "PERCENT") {
-            tmp.percentFormula = body.percent_formula;
-        } else if (type == "GIFT") {
-            tmp.giftFormula = body.giftFormula.gift_formula;
-        }
 
-        if (type == "PERCENT") {
-            let formula = body.percent_formula;
+        if (tmp.type == "PERCENT") {
+            let formula = promotion.percent_formula;
             tmp.percentFormula = {
-                quantityPurchased: formula.quantity_purchased,
+                purchasedQuantity: formula.purchased_quantity,
                 reducedPercent: formula.reduced_percent
             };
-        } else if (type == "GIFT") {
-            let formula = body.gift_formula;
+        } else if (tmp.type == "GIFT") {
+            let formula = promotion.gift_formula;
             tmp.giftFormula = {
-                quantityPurchased: formula.quantity_purchased,
-                donatedQuantity: formula.reduced_percent,
+                purchasedQuantity: formula.purchased_quantity,
+                donatedQuantity: formula.donated_quantity,
                 donatedProduct: formula.donated_product
-            }
+            };
         }
 
         tmp.description = promotion.description;
